# LightCombatManager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  main.cpp  mainwindow.cpp  mainwindow.h  uncrustify.cfg
.github/workflows/: run-mac.yml  run-ubuntu.yml  run-windows.yml  run.yml
include/: Character.h  CharacterHandler.h  CharacterHandler.hpp  CharacterSort.h  FileHandler.h  FileHandler.hpp  Utils.hpp
include/GUI/: CharacterCreationLayout.h  CharacterCreationWidget.h  CharacterCreationWidget.hpp  CustomTable.h  Delegate.h  MainWindow.hpp  StatusEffectDialog.hpp  TableWidget.h  WelcomeLayout.h  WelcomeWidget.h  WelcomeWidget.hpp  mainwindow.h  mainwindow.hpp
include/GUI/Table/: CustomTable.hpp  Delegate.hpp  EditCombatDialog.hpp  StatusEffectDialog.hpp  TableWidget.h  TableWidget.hpp
resources/: resources.qrc
resources/TestingTables/: brokenTable.csv  workingTable.csv
resources/tables/: brokenTable.csv  workingTable.csv
src/: CMakeLists.txt  Character.cpp  CharacterHandler.cpp  CharacterSort.cpp  FileHandler.cpp  Utils.cpp  Utils.hpp  main.cpp
src/GUI/: CMakeLists.txt  CharacterCreationLayout.cpp  CharacterCreationWidget.cpp  CharacterCreationWidget.hpp  CustomTable.cpp  Delegate.cpp  MainWindow.cpp  MainWindow.hpp  StatusEffectDialog.cpp  StatusEffectDialog.hpp  TableWidget.cpp  WelcomeLayout.cpp  WelcomeWidget.cpp  mainwindow.cpp
src/GUI/Table/: AddCharacterDialog.cpp  AddCharacterDialog.hpp  CMakeLists.txt  CustomTable.cpp  Delegate.cpp  EditCombatDialog.cpp  StatusEffectDialog.cpp  TableWidget.cpp  TableWidget.hpp
src/Handler/: CMakeLists.txt  CharacterHandler.cpp  CharacterHandler.hpp  FileHandler.cpp
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
src/handler/: BaseFileHandler.hpp  CMakeLists.txt  CharFileHandler.cpp  CharFileHandler.hpp  CharacterHandler.cpp  CharacterHandler.hpp  FileHandler.cpp  FileHandler.hpp  TableFileHandler.cpp  TableFileHandler.hpp
src/handler/char/: CMakeLists.txt  CharacterHandler.cpp  CharacterHandler.hpp
src/handler/file/: BaseFileHandler.cpp  BaseFileHandler.hpp  CMakeLists.txt  CharFileHandler.cpp  CharFileHandler.hpp  EffectFileHandler.cpp  EffectFileHandler.hpp  TableFileHandler.cpp  TableFileHandler.hpp
src/ui/: CMakeLists.txt  CheckBoxStyle.hpp  MainSettingsDialog.cpp  MainSettingsDialog.hpp  MainWindow.cpp  MainWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp  StatusEffectDialog.cpp  WelcomeWidget.cpp  WelcomeWidget.hpp
src/ui/settings/: AdditionalSettings.cpp  AdditionalSettings.hpp  BaseSettings.hpp  CMakeLists.txt  CharDirSettings.cpp  CharDirSettings.hpp  DirSettings.cpp  DirSettings.hpp  MainSettings.cpp  MainSettings.hpp  RuleSettings.cpp  RuleSettings.hpp  SettingsData.cpp  SettingsData.hpp  SettingsDialog.cpp  SettingsDialog.hpp  TableSettings.cpp  TableSettings.hpp
src/ui/table/: AddCharacterDialog.cpp  CMakeLists.txt  CombatTableWidget.cpp  CombatTableWidget.hpp  CombatWidget.cpp  CombatWidget.hpp  CustomTable.cpp  CustomTable.hpp  Delegate.hpp  DelegateSpinBox.cpp  DelegateSpinBox.hpp  DisabledArrowKeyTable.cpp  DisabledArrowKeyTable.hpp  DisabledNavigationKeyTable.cpp  DisabledNavigationKeyTable.hpp  LogListWidget.cpp  LogListWidget.hpp  TableUtils.cpp  TableUtils.hpp  TableWidget.cpp  TableWidget.hpp  Undo.cpp  Undo.hpp
src/ui/table/additional/: AdditionalInfoData.cpp  AdditionalInfoData.hpp  AdditionalInfoWidget.cpp  AdditionalInfoWidget.hpp  CMakeLists.txt  FocusOutLineEdit.hpp  StatusEffectButton.cpp  StatusEffectButton.hpp
src/ui/table/dialog/: AddCharacterDialog.cpp  AddCharacterDialog.hpp  AddCustomEffectDialog.cpp  AddCustomEffectDialog.hpp  CMakeLists.txt  ChangeHPDialog.cpp  ChangeHPDialog.hpp  ChangeStatDialog.cpp  ChangeStatDialog.hpp  StatusEffectData.hpp  StatusEffectDialog.cpp  StatusEffectDialog.hpp
src/ui/table/dialog/template/: CMakeLists.txt  TemplatesListWidget.cpp  TemplatesListWidget.hpp  TemplatesWidget.cpp  TemplatesWidget.hpp
src/ui/table/settings/: CMakeLists.txt  TableSettings.cpp  TableSettings.hpp
src/ui/table/templates/: CMakeLists.txt  TemplatesListWidget.cpp  TemplatesListWidget.hpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp  UtilsFiles.cpp  UtilsFiles.hpp  UtilsGeneral.cpp  UtilsGeneral.hpp  UtilsTable.cpp  UtilsTable.hpp
test/: CMakeLists.txt  TestCases.odt  main.cpp
test/HandlerTest/: CharacterHandlerTest.cpp
test/Utils/: UtilsTest.cpp
test/UtilsTest/: UtilsTest.cpp
test/handler/: CharFileHandlerTest.cpp  CharacterHandlerTest.cpp  EffectFileHandlerTest.cpp  FileHandlerTest.cpp  TableFileHandlerTest.cpp
test/ui/settings/: SettingsTest.cpp
test/ui/widget/: CombatTableWidgetTest.cpp  LogListWidgetTest.cpp  TemplatesListWidgetTest.cpp
test/utils/: GeneralUtilsTest.cpp  TableUtilsTest.cpp  UtilsFilesTest.cpp  UtilsGeneralTest.cpp  UtilsTest.cpp
test/widget/: CombatTableWidgetTest.cpp
